# Claude-code

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile  config.py  dependencies.py  main.py  package.json  railway.toml  tsconfig.json
apps/api/db/: database.py
apps/api/db/migrations/: env.py
apps/api/models/: appointment.py  conversation.py  lead.py  order.py  tenant.py
apps/api/routers/: conversations.py  leads.py  orders.py  tenants.py  webhook.py
apps/api/services/ai/: claude_client.py  engine.py  intent_classifier.py  prompt_builder.py
apps/api/services/audio/: downloader.py  transcriber.py
apps/api/services/flows/: appointment_flow.py  base_flow.py  faq_flow.py  lead_capture_flow.py  order_flow.py
apps/api/services/handoff/: detector.py  notifier.py
apps/api/services/memory/: context_builder.py  history_manager.py  session_manager.py
apps/api/services/whatsapp/: client.py  message_parser.py  sender.py
apps/api/src/: app.ts  server.ts
apps/api/src/config/: index.ts
apps/api/tasks/: process_message.py
apps/api/tests/: intentClassifier.test.ts  messageProcessor.test.ts  parser.test.ts  promptBuilder.test.ts  routes.test.ts  setup.ts  webhook.test.ts
apps/api/utils/: logger.py  order_number.py
apps/dashboard/: .env.production.example  Dockerfile  next.config.ts  package.json  railway.toml  tailwind.config.ts
apps/dashboard/app/: globals.css  layout.tsx
apps/dashboard/lib/: api.ts  auth.ts
infrastructure/docker/: Dockerfile.api  docker-compose.yml
scripts/: setup_webhook.py
(+50 files in other folders)
