[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whatsapp-ai-agent"
version = "0.1.0"
description = "Multi-tenant WhatsApp AI Agent SaaS"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # AI
    "anthropic>=0.28.0",
    "openai>=1.30.0",          # Whisper STT

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Cache
    "redis>=5.0.4",
    "hiredis>=2.3.2",

    # Task queue
    "celery>=5.4.0",
    "celery[redis]>=5.4.0",

    # HTTP client
    "httpx>=0.27.0",

    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # Security
    "cryptography>=42.0.0",

    # Storage
    "boto3>=1.34.0",            # S3 / Cloudflare R2

    # Email
    "sendgrid>=6.11.0",

    # Utilities
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",           # TestClient
    "factory-boy>=3.3.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
